# bevy_scene_editor

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
scenes/: game_scene.ron
src/: app.rs  core.rs  main.rs
src/editor/: camera.rs  mod.rs  ui.rs
src/game/: mod.rs
