[package]
name = "bevy_scene_editor"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "A runtime level editor for Bevy games"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[dependencies]
bevy = { version = "0.18", default-features = true }
rand = "0.10.0"
tracing = { version = "0.1.44", features = ["max_level_debug", "release_max_level_warn"] }
avian3d = "0.5.0"
bevy_asset_loader = "0.25.0"
bevy_enhanced_input = "0.24.0"

[features]
default = ["dev_native"]

dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
    "bevy/debug"
]

dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"